Bug da frase da página home corrigido acrescentando um id no paragrafo e formatando com display, ,argin top, text align

--- a/css-bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
+++ b/css-bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
@@ -76,6 +76,13 @@ div img {
 
 #container-de-descricao>ol {
     padding: 15px 0px;
+    
+}
+
+#container-de-descricao>p {
+    display: inline-block;
+    margin-top: 30px;
+    text-align: center;
 }
 
 #container-para-comprar {
